--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "axios": "^1.7.2",
+    "body-parser": "^1.20.2",
     "core-js": "^3.8.3",
+    "express": "^4.19.2",
     "vue": "^3.2.13",
-    "vue-router": "^4.4.0"
+    "vue-router": "^4.4.0",
+    "vuetify": "^3.7.0-beta.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -41,5 +45,10 @@
     "last 2 versions",
     "not dead",
     "not ie 11"
-  ]
+  ],
+  "description": "## Project setup ``` npm install ```",
+  "main": "babel.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
