--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "@ionic/vue": "^8.2.7",
     "axios": "^1.7.2",
     "body-parser": "^1.20.2",
     "core-js": "^3.8.3",
